--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 atomicwrites==1.3.0
 attrs==19.1.0
+certifi==2019.6.16
+chardet==3.0.4
 Click==7.0
 colorama==0.4.1
 Flask==1.1.1
 Flask-WTF==0.14.2
+gunicorn==19.9.0
+idna==2.8
 importlib-metadata==0.18
 itsdangerous==1.1.0
 Jinja2==2.10.1
@@ -15,7 +19,9 @@ pluggy==0.12.0
 py==1.8.0
 pyparsing==2.4.0
 pytest==5.0.1
+requests==2.22.0
 six==1.12.0
+urllib3==1.25.3
 wcwidth==0.1.7
 Werkzeug==0.15.4
 WTForms==2.2.1
